libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__basic_conj.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
X ==
    /\ x = 4
    /\ y = 2
================================================================================
