libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__basic_def.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
X == 42
================================================================================
