libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__comment_let_in_list.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
A ==
    LET B == 42
    IN
        /\ C = D
    
\* Where is this placed?
B == 24
================================================================================
