libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__comment_with_lists.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff ==
    /\ A' = 1
    \* Comment in a list.
    /\ B' = 2

\* Some comment for the operator.
Another == 42
================================================================================
