libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__empty_set_seq.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
Init ==
    /\ A = {42}
    /\ B = {}
    /\ C = << 42 >>
    /\ D = <<>>
================================================================================
