libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__if_then_else.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff ==
    IF x THEN
    42
    ELSE
    24

MoreStuff = IF == x THEN 42 ELSE 24 
================================================================================
