libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__inline_comment_col_0.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
Inv ==
    /\ TypeOK
    /\ \A i \in Procs:
\*             /\ (pc[i] \in {"ncs", "e1", "e2"}) => (num[i] = 0)
================================================================================
