libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__lor.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
X == A \/ B
================================================================================
