libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__newline_indent_non_list.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
NoVal ==
    CHOOSE v:

    v \notin
    Val

\* Bananas are good
Store ==
    [Key ->
        Val \union {NoVal}]

\* Set map
Map ==
    {
        P(x): x \in S
    }

Record ==
    [
        name |-> "bananas",
        version |-> 0
    ]
================================================================================
