libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__number_sets.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
EXTENDS Integers
X == [version: Int]
X == [version: Real]
X == [version: Nat]
================================================================================
